--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -49,6 +49,7 @@
 				<a href="{{url_for('admin.articles')}}">articles</a>
 				<a href="{{url_for('admin.projects')}}">Projects</a>
 				<a href="{{url_for('admin.resources')}}">Resources</a>
+				<a href="{{url_for('admin.new_budget')}}">Add Budgets</a>
 				{% endif %}
 				{% endif %}
 				{% if current_user.data.role == "admin" %}
