--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -50,7 +50,8 @@
 				<a href="{{url_for('admin.projects')}}">Projects</a>
 				<a href="{{url_for('admin.resources')}}">Resources</a>
 				<a href="{{url_for('admin.budgets')}}">Budgets</a>
-				<a href="{{url_for('admin.resources_humaines')}}">update Resources Humaine</a>
+				<a href="{{url_for('admin.resources_humaines')}}">Human resources </a>
+				<a href="{{url_for('admin.minislinks')}}">ministries links</a>
 				{% endif %}
 				{% endif %}
 				{% if current_user.data.role == "admin" %}
